<resources>
    <string name="app_name">Cash Note</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_customer">Add Customer</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="add_address">Add Address</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="search">Search</string>
    <string name="i_gave">I gave</string>
    <string name="i_got">I got</string>
    <string name="validate">Validate</string>
    <string name="general_balance">General Balance</string>
    <string name="operation">Operation</string>
    <string name="installment">Installment</string>
    <string name="cash">Cash</string>
    <string name="add_image">Add image</string>
    <string name="add_operation">Add Operation</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="select_category">Select Category</string>
    <string name="work">Work</string>
    <string name="email">E-mail</string>
    <string name="card_holder_s_name">Card holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry">Expiry</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="ccv">CVV</string>
    <string name="cvv">CVV</string>
    <string name="business_n_card">Business \n card</string>
    <string name="visa_ncard">Visa \ncard</string>
    <string name="invite_nfriends">Invite \nfriends</string>
    <string name="company_name">Company Name</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="credit_card">Credit Card</string>
</resources>