<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragment.credit_book.add_customer.AddCustomerFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <include
                android:id="@+id/app_bar"
                layout="@layout/custom_back_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/app_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fillViewport="true">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_edt"
                        android:layout_width="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        app:errorEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:inputType="textPersonName"
                            android:hint="@string/name"
                            android:maxLines="1"
                            tools:text="Name"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone_edt"
                        android:layout_width="0dp"
                        app:layout_constraintTop_toBottomOf="@id/name_edt"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:inputType="phone"
                            android:hint="@string/phone"
                            android:maxLines="1"
                            tools:text="Phone" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/address_edt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"

                        app:layout_constraintTop_toBottomOf="@id/phone_edt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:clickable="true"
                            android:focusable="false"
                            android:drawableEnd="@drawable/ic_next_arrow"
                            android:hint="@string/address"
                            tools:text="Address" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/save_btn"
                        style="@style/TextAppearance.MdcTypographyStyles.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:background="@drawable/rounded_corner"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/validate"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="@dimen/_64sdp"
                        app:layout_constraintStart_toStartOf="parent"
                         />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>